--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuzlocke",
   "author": "Diego Ballesteros Castellanos",
   "description": "Nuzlocke tracker to record encounters with detailed information",
-  "version": "3.10.0",
+  "version": "3.11.0",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/diballesteros/nuzlocke/issues"
@@ -25,6 +25,8 @@
   },
   "private": true,
   "dependencies": {
+    "@sentry/react": "^6.13.3",
+    "@sentry/tracing": "^6.13.3",
     "@smogon/calc": "^0.6.0",
     "html-to-image": "^1.9.0",
     "immer": "^9.0.6",
@@ -37,7 +39,7 @@
     "react-window": "^1.8.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
-    "zustand": "^3.5.14"
+    "zustand": "^3.6.0"
   },
   "scripts": {
     "analyze": "source-map-explorer ''build/static/js/*.js'",
@@ -77,8 +79,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.176",
-    "@types/node": "^16.11.1",
-    "@types/react": "^17.0.31",
+    "@types/node": "^16.11.4",
+    "@types/react": "^17.0.32",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.1",
     "@types/react-window": "^1.8.5",
