--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
   },
   "private": true,
   "dependencies": {
-    "@sentry/react": "^6.13.3",
-    "@sentry/tracing": "^6.13.3",
+    "@sentry/react": "^6.14.0",
+    "@sentry/tracing": "^6.14.0",
     "@smogon/calc": "^0.6.0",
     "html-to-image": "^1.9.0",
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.18.0",
-    "react-router-dom": "^5.3.0",
+    "react-hook-form": "^7.18.1",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
-    "react-toastify": "^8.0.3",
+    "react-toastify": "^8.1.0",
     "react-window": "^1.8.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
-    "zustand": "^3.6.1"
+    "zustand": "3.6.2"
   },
   "scripts": {
     "analyze": "source-map-explorer ''build/static/js/*.js'",
@@ -74,21 +74,21 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.9.11",
     "@cypress/instrument-cra": "^1.4.0",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.176",
     "@types/node": "^16.11.6",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-window": "^1.8.5",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "cypress": "^8.7.0",
     "cypress-file-upload": "^5.0.8",
-    "cypress-localstorage-commands": "^1.5.0",
+    "cypress-localstorage-commands": "^1.6.0",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
