--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
   },
   "private": true,
   "dependencies": {
-    "@sentry/react": "^6.14.0",
-    "@sentry/tracing": "^6.14.0",
+    "@sentry/react": "^6.14.1",
+    "@sentry/tracing": "^6.14.1",
     "@smogon/calc": "^0.6.0",
     "html-to-image": "^1.9.0",
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.18.1",
-    "react-router-dom": "^6.0.0",
+    "react-hook-form": "^7.19.0",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "react-window": "^1.8.6",
@@ -98,8 +98,8 @@
     "eslint-plugin-prettier": "3.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
+    "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.4.4"
