--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuzlocke",
   "author": "Diego Ballesteros Castellanos",
   "description": "Nuzlocke tracker to record encounters with detailed information",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/diballesteros/nuzlocke/issues"
@@ -29,12 +29,12 @@
     "@sentry/tracing": "^6.16.1",
     "@smogon/calc": "^0.6.0",
     "html-to-image": "^1.9.0",
-    "i18next": "^21.6.2",
+    "i18next": "^21.6.3",
     "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.1",
-    "react-router-dom": "^6.1.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
     "react-window": "^1.8.6",
@@ -80,17 +80,17 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@types/lodash": "^4.14.178",
-    "@types/node": "^17.0.0",
+    "@types/node": "^17.0.2",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-window": "^1.8.5",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "cypress": "^9.1.1",
+    "@typescript-eslint/eslint-plugin": "5.7.0",
+    "@typescript-eslint/parser": "5.7.0",
+    "cypress": "^9.2.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-localstorage-commands": "^1.6.1",
-    "eslint": "^8.4.1",
+    "eslint": "8.4.1",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
@@ -100,7 +100,7 @@
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
-    "sass": "^1.45.0",
+    "sass": "^1.45.1",
     "sass-loader": "^12.4.0",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.5.4"
