--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_VERSION=$npm_package_version
 SASS_PATH=./src/assets
 GENERATE_SOURCEMAP=false
+DATABASE_URL="postgresql://postgres:jX*GZr9YS*s9@db.wwdsuizdvysdnofjfcbl.supabase.co:5432/postgres"
