--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuzlocke",
   "author": "Diego Ballesteros Castellanos",
   "description": "Nuzlocke tracker to record encounters with detailed information",
-  "version": "4.2.0",
+  "version": "4.3.0",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/diballesteros/nuzlocke/issues"
@@ -29,18 +29,18 @@
     "@sentry/tracing": "^6.16.1",
     "@smogon/calc": "^0.6.0",
     "html-to-image": "^1.9.0",
-    "i18next": "^21.6.3",
+    "i18next": "^21.6.4",
     "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.15.1",
+    "react-i18next": "^11.15.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
     "react-window": "^1.8.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
-    "zustand": "^3.6.7"
+    "zustand": "^3.6.8"
   },
   "scripts": {
     "analyze": "source-map-explorer ''build/static/js/*.js'",
@@ -75,12 +75,13 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.9.12",
     "@cypress/instrument-cra": "^1.4.0",
+    "@prisma/client": "^3.7.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@types/lodash": "^4.14.178",
-    "@types/node": "^17.0.4",
+    "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
@@ -100,6 +101,7 @@
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
+    "prisma": "^3.7.0",
     "sass": "^1.45.1",
     "sass-loader": "^12.4.0",
     "source-map-explorer": "^2.5.2",
