--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuzlocke",
   "author": "Diego Ballesteros Castellanos",
   "description": "Nuzlocke tracker to record encounters with detailed information",
-  "version": "4.9.3",
+  "version": "4.9.4",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/diballesteros/nuzlocke/issues"
@@ -25,16 +25,16 @@
   },
   "private": true,
   "dependencies": {
-    "@sentry/react": "^6.19.2",
-    "@sentry/tracing": "^6.19.2",
+    "@sentry/react": "^6.19.3",
+    "@sentry/tracing": "^6.19.3",
     "@smogon/calc": "^0.6.0",
     "html-to-image": "^1.9.0",
     "i18next": "^21.6.14",
     "immer": "^9.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.16.1",
-    "react-router-dom": "^6.2.2",
+    "react-i18next": "^11.16.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "react-window": "^1.8.6",
@@ -76,19 +76,19 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.9.12",
     "@cypress/instrument-cra": "^1.4.0",
-    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
-    "@types/lodash": "^4.14.180",
+    "@types/lodash": "^4.14.181",
     "@types/node": "^17.0.23",
-    "@types/react": "^17.0.42",
+    "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-window": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
-    "cypress": "^9.5.2",
+    "cypress": "^9.5.3",
     "cypress-file-upload": "^5.0.8",
     "cypress-localstorage-commands": "^1.7.0",
     "eslint": "8.4.1",
@@ -99,8 +99,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.6.0",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "prettier": "^2.6.1",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "source-map-explorer": "^2.5.2"
