--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     container: cypress/browsers:node14.17.0-chrome88-ff89
     steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+
       - name: 🛫 Checkout
         uses: actions/checkout@v2
 
@@ -28,6 +31,9 @@ jobs:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+
       - name: 🛫 Checkout
         uses: actions/checkout@v2
 
@@ -54,6 +60,9 @@ jobs:
         # runs copies of the current job in parallel
         containers: [1, 2, 3, 4]
     steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+
       - name: 🛫 Checkout
         uses: actions/checkout@v2
 
@@ -93,6 +102,9 @@ jobs:
         # runs copies of the current job in parallel
         containers: [1, 2, 3, 4]
     steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+
       - name: 🛫 Checkout
         uses: actions/checkout@v2
 
@@ -134,6 +146,9 @@ jobs:
         # run copies of the current job in parallel
         containers: [1, 2, 3, 4]
     steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+
       - name: 🛫 Checkout
         uses: actions/checkout@v2
 
@@ -175,6 +190,9 @@ jobs:
         # run copies of the current job in parallel
         containers: [1, 2, 3, 4]
     steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+
       - name: 🛫 Checkout
         uses: actions/checkout@v2
 
