--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sentry/react": "^6.19.7",
     "@sentry/tracing": "^6.19.7",
     "@smogon/calc": "^0.6.0",
+    "@supabase/supabase-js": "^1.35.2",
     "html-to-image": "^1.9.0",
     "i18next": "^21.7.1",
     "immer": "^9.0.12",
