--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "src/serviceWorker.ts",
       "src/serviceWorkerRegistration.ts",
       "src/components/UpdateSW/UpdateSW.tsx",
+      "<rootDir>/src/components/Auth/Auth.tsx",
       "src/index.tsx"
     ]
   },
@@ -20,7 +21,8 @@
       "<rootDir>/src/service-worker.ts",
       "<rootDir>/src/serviceWorkerRegistration.ts",
       "<rootDir>/src/components/UpdateSW/UpdateSW.tsx",
-      "<rootDir>/src/index.tsx"
+      "<rootDir>/src/index.tsx",
+      "<rootDir>/src/components/Auth/Auth.tsx"
     ]
   },
   "private": true,
@@ -28,10 +30,10 @@
     "@sentry/react": "^6.19.7",
     "@sentry/tracing": "^6.19.7",
     "@smogon/calc": "^0.6.0",
-    "@supabase/supabase-js": "^1.35.2",
+    "@supabase/supabase-js": "^1.35.3",
     "html-to-image": "^1.9.0",
-    "i18next": "^21.7.1",
-    "immer": "^9.0.12",
+    "i18next": "^21.8.2",
+    "immer": "^9.0.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-i18next": "^11.16.9",
@@ -79,17 +81,17 @@
     "@cypress/instrument-cra": "^1.4.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^14.1.1",
-    "@types/jest": "^27.5.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/jest": "^27.5.1",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.31",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
+    "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-window": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
-    "cypress": "^9.6.0",
+    "cypress": "^9.6.1",
     "cypress-file-upload": "^5.0.8",
     "cypress-localstorage-commands": "^1.7.0",
     "eslint": "8.4.1",
