--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "analyze": "source-map-explorer ''build/static/js/*.js'",
     "start": "react-scripts start",
     "httpss": "HTTPS=true react-scripts start",
-    "develop:ci": "CHOKIDAR_USEPOLLING=1 react-scripts -r @cypress/instrument-cra start",
+    "develop:ci": "CHOKIDAR_USEPOLLING=1 react-scripts -r @cypress/instrument-cra start --config-file=cypress.config.ts",
     "build": "react-scripts build",
     "e2e": "cypress open",
     "test": "react-scripts test",
