--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "typescript": "4.5.5",
-    "zustand": "3.7.2"
+    "zustand": "^4.1.1"
   },
   "scripts": {
     "analyze": "source-map-explorer ''build/static/js/*.js'",
