--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "@smogon/calc": "^0.7.0",
     "@supabase/supabase-js": "^1.35.7",
     "html-to-image": "^1.11.11",
-    "i18next": "^23.2.6",
+    "i18next": "22.4.15",
     "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.0.1",
+    "react-i18next": "12.2.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
