--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
   install:
     runs-on: ubuntu-latest
-    container: cypress/browsers:node14.17.0-chrome88-ff89
+    container: cypress/browsers:node18.17.0-chrome88-ff89
     steps:
       - name: 🛑 Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.11.0
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: 🎓 Install dependencies
-        run: yarn install
+        run: yarn install --ignore-platform
 
       - name: 🧹 Run linting
         run: yarn lint
@@ -52,7 +52,7 @@ jobs:
   ui-chrome-tests-main:
     timeout-minutes: 15
     runs-on: ubuntu-latest
-    container: cypress/browsers:node14.17.0-chrome88-ff89
+    container: cypress/browsers:node18.17.0-chrome88-ff89
     needs: install
     strategy:
       fail-fast: false
@@ -94,7 +94,7 @@ jobs:
   ui-chrome-tests-other:
     timeout-minutes: 15
     runs-on: ubuntu-latest
-    container: cypress/browsers:node14.17.0-chrome88-ff89
+    container: cypress/browsers:node18.17.0-chrome88-ff89
     needs: install
     strategy:
       fail-fast: false
@@ -137,7 +137,7 @@ jobs:
     timeout-minutes: 15
     runs-on: ubuntu-latest
     container:
-      image: cypress/browsers:node14.17.0-chrome88-ff89
+      image: cypress/browsers:node18.17.0-chrome88-ff89
       options: --user 1001
     needs: install
     strategy:
@@ -181,7 +181,7 @@ jobs:
     timeout-minutes: 15
     runs-on: ubuntu-latest
     container:
-      image: cypress/browsers:node14.17.0-chrome88-ff89
+      image: cypress/browsers:node18.17.0-chrome88-ff89
       options: --user 1001
     needs: install
     strategy:
